# shotcut

./: .gitignore  CMakeLists.txt  README.md
.github/scripts/: smoke-windows-portable.ps1
.github/workflows/: build-linux.yml  build-sdk-windows.yml  build-windows.yml  mcp-rust.yml  publish-mcp-preview.yml  temp-publish-windows-4d987e3.yml
mcp/shotcut-mcp/: Cargo.toml  README.md  codex.example.toml  rust-toolchain.toml
mcp/shotcut-mcp/src/: bridge.rs  main.rs  schema.rs  server.rs
scripts/: build-shotcut-msys2.sh  build-shotcut.sh
src/: CMakeLists.txt  encodepresetutils.h  exporttemporaryfileutils.h  jobqueue.cpp  localpath.h  main.cpp  mainwindow.cpp  mainwindow.h  mcpbridge.cpp  mcpbridge.h  mcpbridgecommands.cpp  mcpbridgeedit.cpp  mcpbridgefilters.cpp  mcpbridgepolicy.h  mcpexporttargetpolicy.cpp  mcpexporttargetpolicy.h  mcpkeyframeinterpolation.h  mcpundoutils.h  mcpxmlpathvalidator.cpp  mcpxmlpathvalidator.h  mltxmlchecker.cpp  mltxmlchecker.h  mltxmlproperty.h
src/commands/: filtercommands.cpp  filtercommands.h  timelinecommands.cpp  timelinecommands.h
src/dialogs/: transcribeaudiodialog.cpp  transcribeaudiodialog.h
src/docks/: encodedock.cpp  encodedock.h  findanalysisfilterparser.h
src/qmltypes/: qmlextension.cpp  qmlfilter.cpp
tests/: CMakeLists.txt  test_mcpbridgepolicy.cpp  test_mcpexporttargetpolicy.cpp  test_mcpundoutils.cpp  test_mcpxmlpathvalidator.cpp  test_mltxmlproperty.cpp
