[package]
name = "shotcut-mcp"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Pure Rust MCP server for controlling Shotcut through its local editing bridge"
repository = "https://github.com/kiyosh11/shotcut"
publish = false

[dependencies]
anyhow = "1.0"
rmcp = { version = "2.2.0", default-features = false, features = ["macros", "server", "transport-io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["io-util", "io-std", "macros", "net", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
